--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>OneLink</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
-    <name>OneLink-1.0</name>
+    <name>OneLink</name>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -36,11 +36,21 @@
     </dependencies>
     
      <build>
+         <defaultGoal>install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                        <id>compile</id>
+                    </execution>
+                </executions>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -58,13 +68,33 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>exec</goal>
+                            <goal>help</goal>
+                            <goal>java</goal>
+                        </goals>
+                        <id>exec</id>
+                    </execution>
+                </executions>
+                <configuration>
+                    <foo>bar</foo>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.6</version>
                 <executions>
                     <execution>
                         <phase>validate</phase>
+                        
                         <goals>
+                            
                             <goal>copy</goal>
                         </goals>
                         <configuration>
@@ -80,8 +110,12 @@
                             </artifactItems>
                         </configuration>
                     </execution>
+                    
                 </executions>
+                
             </plugin>
+            
         </plugins>
+        
     </build>
 </project>
